# pocketbook-task

./: .gitignore  CMakeLists.txt  ErrorDialog.qml  FileModel.cpp  FileModel.h  ImageCompression.cpp  ImageCompression.h  Main.qml  README.md  main.cpp
